[gd_scene load_steps=5 format=3 uid="uid://bwwrps7wabj7i"]

[ext_resource type="FontFile" uid="uid://cibh2hon2txu4" path="res://Assets/Technical/Perun.ttf" id="1_3qc86"]
[ext_resource type="Script" path="res://Source/TestTask.gd" id="1_56uu1"]

[sub_resource type="Gradient" id="Gradient_tvoug"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vxr33"]
gradient = SubResource("Gradient_tvoug")
height = 60

[node name="TestTask" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_56uu1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.537
anchor_top = 0.239
anchor_right = 0.537
anchor_bottom = 0.239
offset_left = -249.98
offset_top = -189.44
offset_right = 250.02
offset_bottom = 189.56
grow_horizontal = 2
grow_vertical = 2

[node name="TaskQuestion" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_3qc86")
theme_override_font_sizes/font_size = 30
text = "Выберите правильное слово"
autowrap_mode = 3

[node name="Gap3" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_vxr33")

[node name="TaskText" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3qc86")
theme_override_font_sizes/font_size = 30
text = "Выберите правильное слово"
autowrap_mode = 3

[node name="Gap2" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_vxr33")

[node name="AnswersContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="AnswerColor" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.17, 0.17, 1)

[node name="AnswerTexture" type="TextureRect" parent="AnswerColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
